<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoursSupSilences">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewCoursDeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texteCoursSilencesDeb" />

            <ImageView
                android:id="@+id/imageViewBarre"
                android:layout_width="match_parent"
                android:layout_height="164dp"
                app:srcCompat="@drawable/soupires_decompo" />

            <TextView
                android:id="@+id/textViewCoursSuite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/texteCoursSilencesSuite" />

            <ImageView
                android:id="@+id/imageViewBinaire"
                android:layout_width="match_parent"
                android:layout_height="99dp"
                app:srcCompat="@drawable/pause_demi_pause" />

            <TextView
                android:id="@+id/textViewCoursMnemo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/texteCoursSilencesMnemo" />

            <TextView
                android:id="@+id/textViewCoursFin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texteCoursSilencesFin" />

            <ImageView
                android:id="@+id/imageViewAttente"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                app:srcCompat="@drawable/mesures_attente" />

            <TextView
                android:id="@+id/textViewCoursAttente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/texteCoursSilencesAttente" />

            <Button
                android:id="@+id/buttonRetour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Retour au menu principal" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>