<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoursSupArticulations">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewCoursDeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/texteCoursArticulationsDeb" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewPiq"
                    android:layout_width="92dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/arti_noire_piq" />

                <TextView
                    android:id="@+id/textViewCoursPiq"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texteCoursArticulationsPiq" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewLie"
                    android:layout_width="92dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/arti_noires_liees" />

                <TextView
                    android:id="@+id/textViewCoursLie"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texteCoursArticulationsLie" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewCoursLSuite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/texteCoursArticulationsLieSuite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewTenuto"
                    android:layout_width="92dp"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/arti_noire_trait" />

                <TextView
                    android:id="@+id/textViewCoursTenuto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/texteCoursArticulationsTenuto" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewCoursTSuite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texteCoursArticulationsTenutoSuite" />

            <ImageView
                android:id="@+id/imageViewTenutoLie"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/arti_liees_tenuto" />

            <TextView
                android:id="@+id/textViewCoursPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texteCoursArticulationsPoint" />

            <ImageView
                android:id="@+id/imageViewPoint"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/arti_point_orgue" />

            <Button
                android:id="@+id/buttonRetour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Retour au menu principal" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>