<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoursSupMesure">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewCoursDeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texteCoursMesDeb" />

            <ImageView
                android:id="@+id/imageViewBarreMes"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                app:srcCompat="@drawable/barre_mesure" />

            <TextView
                android:id="@+id/textViewCoursDoubleBarres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/texteCoursMesBarres" />

            <ImageView
                android:id="@+id/imageViewDoubleBarre"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                app:srcCompat="@drawable/doubles_barres" />

            <TextView
                android:id="@+id/textViewCoursSuite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/texteCoursMesSuite" />

            <ImageView
                android:id="@+id/imageViewBinaire"
                android:layout_width="match_parent"
                android:layout_height="182dp"
                app:srcCompat="@drawable/chiffrage_binaire" />
            <ImageView
                android:id="@+id/imageViewTernaire"
                android:layout_width="match_parent"
                android:layout_height="182dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/chiffrage_ternaire" />

            <TextView
                android:id="@+id/textViewFin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/texteCoursMesC" />

            <ImageView
                android:id="@+id/imageViewC"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/chiffrage_c" />

            <Button
                android:id="@+id/buttonRetour"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Retour au menu principal" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>